# Vantage

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  analyst.py  graph.py  quant_risk.py  scraper.py
backend/app/api/: deps.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py  database.py
backend/app/models/: schemas.py  state.py
backend/app/prompts/: sentiment_prompt.py
backend/scripts/: preload_model.sh
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx  UserSettingsPanel.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Auth.tsx  Landing.tsx  Terminal.tsx
scripts/: Vantage.ipynb
